tests/expectations/compiler/function/duplicate_parameter_fail.out
Error [EAST0372017]: The name `a` is defined multiple times.
    --> compiler-test:3:29
     |
   3 |       transition main(a: u32, a: u32) -> u32 {
     |                       ^ previous definition of `a` here
   3 |       transition main(a: u32, a: u32) -> u32 {
     |                               ^ `a` redefined here
